refactor: update sonar issues